--- a/English/English.Resolver/English.Resolver.csproj
+++ b/English/English.Resolver/English.Resolver.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\English.Core\English.Core.csproj">
@@ -50,14 +55,14 @@
       <Project>{04885c11-5855-4294-946b-a20145996488}</Project>
       <Name>English.Dal</Name>
     </ProjectReference>
-    <ProjectReference Include="..\English.GUI\English.GUI.csproj">
-      <Project>{27bea96a-ff20-4944-bdc8-38334f3a6bc3}</Project>
-      <Name>English.GUI</Name>
-    </ProjectReference>
     <ProjectReference Include="..\English.Service\English.Service.csproj">
       <Project>{8c67c0eb-3c2c-481d-b9b7-2b47543f7b29}</Project>
       <Name>English.Service</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
