--- a/English/English.Service/English.Service.csproj
+++ b/English/English.Service/English.Service.csproj
@@ -39,6 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructures\ExerciseService.cs" />
+    <Compile Include="Infrastructures\ForumService.cs" />
+    <Compile Include="Infrastructures\IntroductionService.cs" />
+    <Compile Include="Infrastructures\UserService.cs" />
+    <Compile Include="Interfaces\IExerciseService.cs" />
+    <Compile Include="Interfaces\IForumService.cs" />
+    <Compile Include="Interfaces\IIntroductionService.cs" />
+    <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +59,7 @@
       <Name>English.Dal</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
